fix for JDK 8