@@ -4,17 +4,18 @@ import io.github.cadenceoss.iwf.core.StateDef;
 import io.github.cadenceoss.iwf.core.Workflow;
 import io.github.cadenceoss.iwf.core.command.SignalMethodDef;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class BasicSignalWorkflow implements Workflow {
     @Override
     public List<SignalMethodDef<?>> getSignalMethods() {
-        return List.of(SignalMethodDef.create(Integer.class, BasicSignalWorkflowState1.SIGNAL_NAME));
+        return Arrays.asList(SignalMethodDef.create(Integer.class, BasicSignalWorkflowState1.SIGNAL_NAME));
     }
 
     @Override
     public List<StateDef> getStates() {
-        return List.of(
+        return Arrays.asList(
                 StateDef.startingState(new BasicSignalWorkflowState1())
         );
     }
